--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <script src="index.js"></script>
 </head>
 <body>
-    
+    <input id="outCont" type="number">
+    <section class="btns">
+        <button type="button">0</button>
+        <button type="button">1</button>
+        <button type="button">2</button>
+        <button type="button">3</button>
+        <button type="button">4</button>
+        <button type="button">5</button>
+        <button type="button">6</button>
+        <button type="button">7</button>
+        <button type="button">8</button>
+        <button type="button">9</button>
+        <button type="button">+</button>
+        <button type="button">-</button>
+        <button type="button">/</button>
+        <button type="button">*</button>
+        <button type="button">C</button>
+        <button type="button">.</button>
+    </section>
 </body>
 </html>
