--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <script src="index.js"></script>
 </head>
 <body>
-    <input id="outCont" type="number">
+    <input id="outCont" >
     <section id="btns">
-        <section id="num"></section>
-            <button type="button">0</button>
+        <section id="num">
             <button type="button">1</button>
             <button type="button">2</button>
             <button type="button">3</button>
@@ -21,16 +20,18 @@
             <button type="button">7</button>
             <button type="button">8</button>
             <button type="button">9</button>
+            <button type="button">0</button>
+            <button type="button">.</button>
         </section>
+        <button id="clear" type="button">C</button>
         <section id="ops">
             <button type="button">+</button>
             <button type="button">-</button>
             <button type="button">/</button>
             <button type="button">*</button>
-            <button type="button">C</button>
-            <button type="button">.</button>
         </section>
         <button id="equate" type="button">=</button>
+
     </section>
 </body>
 </html>
